# MyLife

./: .gitignore  BUILD_DESKTOP.md  FINALIZATION_PACK.md  GOOGLE_DRIVE_SETUP.md  README.md  RELEASE.md  build_desktop.ps1
backend/: .env.example  create_exe.ps1  mylife-backend.spec  requirements.txt  reset_db.py  seed_data.ps1  test_api.ps1  verify_photos.py  verify_stable.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/middleware/: vault_middleware.py
backend/app/routers/: ai.py  ai_coach.py  backup.py  cleanup.py  diagnostics.py  goals.py  import_data.py  journal.py  media.py  memories.py  recap.py  reports.py  search.py  settings.py  sync.py  system.py  trash.py  vault.py  versions.py
backend/app/services/: ai_router.py  cleanup_service.py  fts_service.py  google_drive_service.py  import_service.py  insights_service.py  journal_service.py  recap_service.py  scheduler.py  sync_service.py  vault_service.py  vector_store.py  version_service.py
frontend/: .env.example  clear-cache.ps1  convert_logo.ps1  create_logo.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  create_icon.ps1  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.js
frontend/src/components/: CommandPalette.jsx  ErrorBoundary.jsx  FloatingParticles.jsx  Layout.jsx  MemoryCard.jsx  RecapCard.jsx  StatusMessage.jsx  ThemeSelector.jsx
frontend/src/pages/: AddMemory.jsx  (+27 more)
(+8 files in other folders)
